Archive2/7a/cda814771b356c/output
main.cpp: In function 'fish aquarium::* pick_dinner(bool)':
main.cpp:15:27: error: invalid conversion from 'shark aquarium::*' to 'fish aquarium::*' [-fpermissive]
         return &aquarium::shark_;
                           ^
main.cpp:17:27: error: invalid conversion from 'trout aquarium::*' to 'fish aquarium::*' [-fpermissive]
         return &aquarium::trout_;
                           ^
